<resources>
    <string name="app_name">VK</string>
    <string name="temp_name">name</string>
    <string name="You">You</string>
    <string name="Ded_pool">Ded poooooooooooooooooooooooooooooooooooooooooooooooooooool</string>
    <string name="Halk">Halk</string>
    <string name="Batman">Batman</string>
    <string name="Iron_man">Iron man</string>
    <string name="Hi_massage">Привет</string>
    <string name="close">Закыть</string>
    <string name="Back">назад</string>
</resources>