<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ContactListActivity"
    android:padding="16dp">
    <ImageView
        android:id="@+id/icon1"
        android:layout_width="@dimen/member_circle_size"
        android:layout_height="@dimen/member_circle_size"
        android:background="@drawable/circle_member"
        android:src="@drawable/dedpool_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/name1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/Ded_pool"
        android:gravity="center"
        android:singleLine="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintLeft_toRightOf="@id/icon1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/icon1"
        app:layout_constraintBottom_toBottomOf="@id/icon1"/>

    <ImageView
        android:id="@+id/icon2"
        android:layout_width="@dimen/member_circle_size"
        android:layout_height="@dimen/member_circle_size"
        android:background="@drawable/circle_member"
        android:src="@drawable/halk"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/icon1"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/name2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/Halk"
        android:gravity="center"
        android:singleLine="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintLeft_toRightOf="@id/icon2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/icon2"
        app:layout_constraintBottom_toBottomOf="@id/icon2"/>

    <ImageView
        android:id="@+id/icon3"
        android:layout_width="@dimen/member_circle_size"
        android:layout_height="@dimen/member_circle_size"
        android:background="@drawable/circle_member"
        android:src="@drawable/iron_man"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/icon2"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/name3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/Iron_man"
        android:gravity="center"
        android:singleLine="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintLeft_toRightOf="@id/icon3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/icon3"
        app:layout_constraintBottom_toBottomOf="@id/icon3"/>

    <ImageView
        android:id="@+id/icon4"
        android:layout_width="@dimen/member_circle_size"
        android:layout_height="@dimen/member_circle_size"
        android:background="@drawable/circle_member"
        android:src="@drawable/batman"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/icon3"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/name4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/Batman"
        android:gravity="center"
        android:singleLine="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintLeft_toRightOf="@id/icon4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/icon4"
        app:layout_constraintBottom_toBottomOf="@id/icon4"/>

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:textSize="20sp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>